[workspace]
members = [
    "crates/rusty-manifold-fixtures",
    "crates/rusty-manifold-model",
    "crates/rusty-manifold-peer",
    "crates/rusty-manifold-runtime-host",
    "crates/rusty-manifold-peer-runtime-host",
    "crates/rusty-manifold-media-session",
    "crates/rusty-manifold-broker-product",
    "crates/rusty-manifold-broker-adapter",
    "crates/rusty-manifold-admission",
    "crates/rusty-manifold-schema",
    "crates/rusty-manifold-stream-observation",
    "crates/rusty-manifold-zmq",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Till Holzapfel"]
license = "AGPL-3.0-or-later"
rust-version = "1.80"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
