[package]
name = "rusty-manifold-broker-product"
description = "Exact broker product specification and immutable feature-lock resolution."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
rusty-manifold-model = { path = "../rusty-manifold-model", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true
