[package]
name = "rusty-manifold-model"
description = "Core identifiers and model primitives for Rusty Manifold contracts."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = []
serde = ["dep:serde"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
serde_json = "1"

[lints]
workspace = true
