[package]
name = "rusty-manifold-peer-runtime-host"
description = "Compile-time-selected source-only Runtime Host extension for Manifold peer authority."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
rusty-manifold-model = { path = "../rusty-manifold-model", features = ["serde"] }
rusty-manifold-broker-adapter = { path = "../rusty-manifold-broker-adapter" }
rusty-manifold-media-session = { path = "../rusty-manifold-media-session" }
rusty-manifold-peer = { path = "../rusty-manifold-peer" }
rusty-manifold-runtime-host = { path = "../rusty-manifold-runtime-host" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
ed25519-dalek = { version = "=2.1.1", default-features = false }
rusty-manifold-admission = { path = "../rusty-manifold-admission" }
rusty-manifold-broker-product = { path = "../rusty-manifold-broker-product" }
sha2 = { version = "0.10", default-features = false }

[lints]
workspace = true
