[package]
name = "rusty-manifold-peer"
description = "Manifold-owned peer identity and accepted peer-status authority contracts."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
ed25519-dalek = { version = "=2.1.1", default-features = false }
rusty-manifold-model = { path = "../rusty-manifold-model", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
sha2 = { version = "0.10", default-features = false }

[dev-dependencies]
serde_json = "1"

[lints]
workspace = true
