[package]
name = "rusty-manifold-peer"
description = "Manifold-owned peer identity and accepted peer-status authority contracts."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
ed25519-dalek = { version = "=2.1.1", default-features = false }
rusty-manifold-model = { path = "../rusty-manifold-model", features = ["serde"] }
rusty-manifold-media-session = { path = "../rusty-manifold-media-session" }
rusty-manifold-runtime-host = { path = "../rusty-manifold-runtime-host" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = { version = "0.10", default-features = false }

[dev-dependencies]
rusty-manifold-admission = { path = "../rusty-manifold-admission" }

[lints]
workspace = true
