[package]
name = "rusty-manifold-runtime-host"
description = "Source-only revisioned authority runtime host for Rusty Manifold."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
rusty-manifold-model = { path = "../rusty-manifold-model", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true
