[package]
name = "rusty-manifold-stream-observation"
description = "Manifold-owned review and application authority for external low-rate stream observations."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
rusty-manifold-model = { path = "../rusty-manifold-model", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = { version = "0.10", default-features = false }

[lints]
workspace = true
