[package]
name = "rusty-manifold-zmq"
description = "Optional pure-Rust ZeroMQ adapter helpers for Rusty Manifold bridge routes."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = []
serde = ["dep:serde", "rusty-manifold-model/serde"]
runtime = ["dep:tokio", "dep:zeromq"]

[[example]]
name = "zmq_pub_sub_loopback"
path = "examples/zmq_pub_sub_loopback.rs"
required-features = ["runtime"]

[[example]]
name = "qcl084_req_rep_probe"
path = "examples/qcl084_req_rep_probe.rs"
required-features = ["runtime"]

[dependencies]
rusty-manifold-model = { path = "../rusty-manifold-model", default-features = false }
serde = { version = "1", features = ["derive"], optional = true }
tokio = { version = "1", features = ["rt", "time"], optional = true }
zeromq = { version = "0.6", optional = true }

[dev-dependencies]
serde_json = "1"

[lints]
workspace = true
